--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ja">
   <head>
@@ -15,6 +16,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <link rel="stylesheet" href="{% static 'style.css' %}" />
 
     <style>
       :root {
@@ -26,30 +28,66 @@
         background-color: #222;
         border-right: 2px solid #00a8f0;
       }
+      .sidebar .container {
+        padding: 10px 15px 0px 15px;
+        border-bottom: 1px solid #2db5ef;
+      }
+
+      .sidebar .nav {
+        flex-direction: column;
+        padding-top: 20px;
+      }
+
+      .sidebar .nav-link {
+        color: #e5e5e5;
+        font-size: 1.25rem;
+        padding: 0.8rem 1.5rem;
+        border-radius: 0.25rem;
+        margin-bottom: 0.25rem;
+      }
+
+      .main-content {
+        width: calc(100% - var(--sidebar-width));
+        padding: 2rem;
+      }
+
       body {
         color: #e5e5e5;
         background-color: #333;
       }
     </style>
   </head>
-  <body>
+  <body class="d-flex">
     <div class="sidebar">
-      <nav>
-        <p class="fs-3">生産管理</p>
+      <nav class="container">
+        <p class="fs-2"><i class="bi bi-box-seam-fill me-2"></i> 生産管理</p>
       </nav>
       <ul class="nav nav-pills">
         <li class="nav-item">
-          <a href="{% url 'test' %}" class="nav-link">
-            <span class="fs-3">テストページ</span>
+          <a href="{% url 'dashbord' %}" class="nav-link">
+            <span>
+              <i class="bi bi-grid-1x2-fill me-2"></i> ダッシュボード</span
+            >
           </a>
         </li>
         <li class="nav-item">
-          <a href="{% url 'test' %}" class="nav-link">
-            <span class="fs-3">テストページ</span>
+          <a href="{% url 'item_register' %}" class="nav-link">
+            <span><i class="bi bi-motherboard-fill me-2"></i>品番登録</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="{% url 'order_list' %}" class="nav-link">
+            <span><i class="bi bi-list-ul me-2"></i>受注入力</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="{% url 'shipping_list' %}" class="nav-link">
+            <span><i class="bi bi-cart-check-fill me-2"></i>出荷一覧</span>
           </a>
         </li>
       </ul>
     </div>
+    <main class="main-content">{% block content %}{% endblock content %}</main>
 
     <!--ここからJS-->
 
