--- a/templates/base.html
+++ b/templates/base.html
@@ -103,5 +103,6 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
+    {% block extra_js %}{% endblock extra_js %}
   </body>
 </html>
