--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,12 @@
     />
     <link rel="stylesheet" href="{% static 'style.css' %}" />
 
+    <!-- Bootstrap datatables -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/2.1.8/css/dataTables.bootstrap5.css"
+    />
+
     <style>
       :root {
         --sidebar-width: 280px;
@@ -56,7 +62,6 @@
         background-color: #333;
       }
     </style>
-    
   </head>
   <body class="d-flex">
     <div class="sidebar">
@@ -104,6 +109,10 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
+    <!-- Bootstrap datatable 1 -->
+    <script src="https://cdn.datatables.net/2.1.8/js/dataTables.js"></script>
+    <!-- Bootstrap datatable 2 -->
+    <script src="https://cdn.datatables.net/2.1.8/js/dataTables.bootstrap5.js"></script>
     {% block extra_js %}{% endblock extra_js %}
   </body>
 </html>
