--- a/templates/item_register.html
+++ b/templates/item_register.html
@@ -3,7 +3,7 @@
   <div class>
     <h1 class="h2"><i class="bi bi-motherboard-fill me-2"></i>品番登録</h1>
   </div>
-  <div class="card">
+  <div class="card mb-4">
     <div class="card-header py-3">
       <h2 class="m-0 h4">品番登録</h2>
     </div>
@@ -42,45 +42,107 @@
             type="number"
           />
         </div>
-        <div class="mb-3">
-          <label>納期</label>
-          <input
-            id="delivery_date"
-            class="form-control"
-            placeholder="納期"
-            maxlength="50"
-            type="text"
-          />
-        </div>
       </div>
     </div>
-    <div class="text-center py-3">
+    <div class="d-flex justify-content-center gap-4 py-3">
       <button id="save_btn" class="btn btn-primary btn-lg px-5">登録</button>
+      <button id="delete_btn" class="btn btn-danger btn-lg px-5">削除</button>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-header py-3">
+      <h2 class="m-0 h4">品番一覧</h2>
+    </div>
+    <div class="card-body">
+      <table id="item_table" class="table table-dark table-striped table-hover w-100">
+        <thead>
+          <tr>
+            <th>品番</th>
+            <th>品名</th>
+            <th>単価</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for item in items %}
+          <tr>
+            <td>{{ item.item_no }}</td>
+            <td>{{ item.item_name }}</td>
+            <td>{{ item.item_price }}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
 {% endblock content %} {% block extra_js %}
 <script>
-  $("#save_btn").on("click", function () {
-    const fields = {
-      item_no: $("#item_no").val(),
-      item_name: $("#item_name").val(),
-      item_price: $("#item_price").val(),
-      delivery_date: $("#delivery_date").val(),
-    };
-    console.log(fields);
+  $(document).ready(function () {
+    const table = new DataTable("#item_table", {
+      language: {
+        url: "https://cdn.datatables.net/plug-ins/1.13.7/i18n/ja.json",
+      },
+    });
 
-    $.ajax({
-      url: "{% url 'ajax_save_item' %}",
-      type: "POST",
-      data: fields,
-      headers: { "X-CSRFToken": "{{ csrf_token }}" },
-    }).done(function (response) {
-      if (response.status == "success") {
-        alert("成功しました" + response.message);
-      } else {
-        alert("失敗しました" + response.message);
-      }
+    //登録ボタンを押した時の処理
+    $("#save_btn").on("click", function () {
+      const fields = {
+        item_no: $("#item_no").val(),
+        item_name: $("#item_name").val(),
+        item_price: $("#item_price").val(),
+      };
+      console.log(fields);
+
+      $.ajax({
+        url: "{% url 'ajax_save_item' %}",
+        type: "POST",
+        data: fields,
+        headers: { "X-CSRFToken": "{{ csrf_token }}" },
+      }).done(function (response) {
+        // 成功の場合
+        if (response.status == "success") {
+          // 成功の場合入力フィールドを空にする。
+          $("#item_no").val("");
+          $("#item_name").val("");
+          $("#item_price").val("");
+          alert("品番" + response.message + "の登録に成功しました。");
+
+          //重複の場合
+        } else if (response.status == "error_duplicate") {
+          alert("品番" + response.message + "が重複しています。");
+
+          //その他の失敗の場合
+        } else {
+          alert("無効なリクエストです。");
+        }
+      });
+    });
+
+    //削除ボタンを押した時の処理
+    $("#delete_btn").on("click", function () {
+      const fields = {
+        item_no: $("#item_no").val(),
+      };
+      console.log(fields);
+      $.ajax({
+        url: "{% url 'ajax_delete_item' %}",
+        type: "POST",
+        data: fields,
+        headers: { "X-CSRFToken": "{{ csrf_token }}" },
+      }).done(function (response) {
+        if (response.status == "success") {
+          // 成功の場合入力フィールドを空にする。
+          $("#item_no").val("");
+          $("#item_name").val("");
+          $("#item_price").val("");
+          alert("品番" + response.message + "の削除に成功しました。");
+          //品番がない場合
+        } else if (response.status == "error_nai") {
+          alert("品番" + response.message + "がありません。");
+        } else {
+          alert("無効なリクエストです。");
+        }
+      });
     });
   });
 </script>
