--- a/templates/item_register.html
+++ b/templates/item_register.html
@@ -42,6 +42,12 @@
             type="number"
           />
         </div>
+        <div class="content h-50 d-flex align-items-center">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="item_deleted" />
+            <label class="form-check-label" for="item_deleted"> 廃番 </label>
+          </div>
+        </div>
       </div>
     </div>
     <div class="d-flex justify-content-center gap-4 py-3">
@@ -54,12 +60,16 @@
       <h2 class="m-0 h4">品番一覧</h2>
     </div>
     <div class="card-body">
-      <table id="item_table" class="table table-dark table-striped table-hover w-100">
+      <table
+        id="item_table"
+        class="table table-dark table-striped table-hover w-100"
+      >
         <thead>
           <tr>
             <th>品番</th>
             <th>品名</th>
             <th>単価</th>
+            <th>廃番</th>
           </tr>
         </thead>
         <tbody>
@@ -68,6 +78,7 @@
             <td>{{ item.item_no }}</td>
             <td>{{ item.item_name }}</td>
             <td>{{ item.item_price }}</td>
+            <td>{{ item.item_deleted }}</td>
           </tr>
           {% endfor %}
         </tbody>
@@ -78,7 +89,33 @@
 {% endblock content %} {% block extra_js %}
 <script>
   $(document).ready(function () {
+    const url = "{% url 'item_register' %}";
     const table = new DataTable("#item_table", {
+      ajax: {
+        url: url,
+        type: "POST",
+        data: {
+          kubun: "get_item",
+        },
+        headers: { "X-CSRFToken": "{{ csrf_token }}" },
+      },
+      columns: [
+        { data: "item_no" },
+        { data: "item_name" },
+        { data: "item_price" },
+        {
+          data: "item_deleted",
+          className: "text-center",
+          render: function (data) {
+            switch (data) {
+              case true:
+                return '<i class="bi bi-check-lg"></i>';
+              default:
+                return "";
+            }
+          },
+        },
+      ],
       language: {
         url: "https://cdn.datatables.net/plug-ins/1.13.7/i18n/ja.json",
       },
@@ -90,21 +127,26 @@
         item_no: $("#item_no").val(),
         item_name: $("#item_name").val(),
         item_price: $("#item_price").val(),
+        item_deleted: $("#item_deleted").prop("checked"),
       };
+      fields.kubun = "save_item";
       console.log(fields);
 
       $.ajax({
-        url: "{% url 'ajax_save_item' %}",
+        url: url,
         type: "POST",
         data: fields,
         headers: { "X-CSRFToken": "{{ csrf_token }}" },
       }).done(function (response) {
+        // 成功失敗関係なく、テーブル情報を最新にする
+        table.ajax.reload();
         // 成功の場合
         if (response.status == "success") {
           // 成功の場合入力フィールドを空にする。
           $("#item_no").val("");
           $("#item_name").val("");
           $("#item_price").val("");
+          $("#item_deleted").prop("checked", false);
           alert("品番" + response.message + "の登録に成功しました。");
 
           //重複の場合
@@ -123,13 +165,16 @@
       const fields = {
         item_no: $("#item_no").val(),
       };
+      fields.kubun = "delete_item";
       console.log(fields);
       $.ajax({
-        url: "{% url 'ajax_delete_item' %}",
+        url: url,
         type: "POST",
         data: fields,
         headers: { "X-CSRFToken": "{{ csrf_token }}" },
       }).done(function (response) {
+        // 成功失敗関係なく、テーブル情報を最新にする
+        table.ajax.reload();
         if (response.status == "success") {
           // 成功の場合入力フィールドを空にする。
           $("#item_no").val("");
