--- a/templates/item_register.html
+++ b/templates/item_register.html
@@ -7,12 +7,13 @@
     <div class="card-header py-3">
       <h2 class="m-0 h4">品番登録</h2>
     </div>
-    <div class="card-body row gx-5">
+    <div id="item_register" class="card-body row gx-5">
       <div class="col-md-6">
         <div class="mb-3">
           <label>品番</label>
           <input
             id="item_no"
+            data-id="item_no"
             class="form-control"
             placeholder="品番"
             maxlength="50"
@@ -23,6 +24,7 @@
           <label>品名</label>
           <input
             id="item_name"
+            data-id="item_name"
             class="form-control"
             placeholder="品名"
             maxlength="50"
@@ -36,6 +38,7 @@
           <label>単価</label>
           <input
             id="item_price"
+            data-id="item_price"
             class="form-control"
             placeholder="単価"
             maxlength="50"
@@ -44,7 +47,12 @@
         </div>
         <div class="content h-50 d-flex align-items-center">
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="item_deleted" />
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="item_deleted"
+              data-id="item_deleted"
+            />
             <label class="form-check-label" for="item_deleted"> 廃番 </label>
           </div>
         </div>
@@ -123,19 +131,28 @@
 
     //登録ボタンを押した時の処理
     $("#save_btn").on("click", function () {
-      const fields = {
-        item_no: $("#item_no").val(),
-        item_name: $("#item_name").val(),
-        item_price: $("#item_price").val(),
-        item_deleted: $("#item_deleted").prop("checked"),
-      };
-      fields.kubun = "save_item";
+      let fields = {};
+
+      $("#item_register")
+        .find("input")
+        .each(function () {
+          switch ($(this).attr("type")) {
+            case "checkbox":
+              fields[$(this).data("id")] = $(this).prop("checked");
+              break;
+            default:
+              fields[$(this).data("id")] = $(this).val();
+          }
+        });
       console.log(fields);
 
       $.ajax({
         url: url,
         type: "POST",
-        data: fields,
+        data: {
+          fields:JSON.stringify(fields),
+          kubun:"save_item",
+        },
         headers: { "X-CSRFToken": "{{ csrf_token }}" },
       }).done(function (response) {
         // 成功失敗関係なく、テーブル情報を最新にする
