--- a/templates/dashbord.html
+++ b/templates/dashbord.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %} {% block content %}
-<p>ダッシュボードページです。</p>
+<p>▼ 入力フォーム（仮）</p>
 
-{% endblock content %}
+{% endblock content %} {% block extra_js %}
+
+</script>
+{% endblock %}
