--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="{% url 'order_list' %}" class="nav-link">
+          <a href="{% url 'order_input' %}" class="nav-link">
             <span><i class="bi bi-list-ul me-2"></i>受注入力</span>
           </a>
         </li>
