品番をselect2で選択できるように

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,12 @@
       href="https://cdn.datatables.net/2.1.8/css/dataTables.bootstrap5.css"
     />
 
+    <!-- select2 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
+      rel="stylesheet"
+    />
+
     <style>
       :root {
         --sidebar-width: 280px;
@@ -113,6 +119,8 @@
     <script src="https://cdn.datatables.net/2.1.8/js/dataTables.js"></script>
     <!-- Bootstrap datatable 2 -->
     <script src="https://cdn.datatables.net/2.1.8/js/dataTables.bootstrap5.js"></script>
+    <!-- select2 -->
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     {% block extra_js %}{% endblock extra_js %}
   </body>
 </html>
