--- a/templates/base.html
+++ b/templates/base.html
@@ -23,11 +23,15 @@
       rel="stylesheet"
       href="https://cdn.datatables.net/2.1.8/css/dataTables.bootstrap5.css"
     />
-
     <!-- select2 -->
     <link
       href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
       rel="stylesheet"
+    />
+    <!-- Select2 Bootstrap 5 Theme -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css"
     />
 
     <style>
