--- a/templates/order_input.html
+++ b/templates/order_input.html
@@ -32,18 +32,6 @@
             placeholder="品名"
           />
         </div>
-      </div>
-      <div class="col-md-6 d-flex flex-column gap-3">
-        <div class="mb-3">
-          <label class="form-label">単価</label>
-          <input
-            class="form-control w-100"
-            id="item-price"
-            data-id="item-price"
-            type="number"
-            placeholder="単価"
-          />
-        </div>
         <div class="content h-50 d-flex align-items-center">
           <div class="form-check">
             <input
@@ -58,8 +46,30 @@
           </div>
         </div>
       </div>
+      <div class="col-md-6 d-flex flex-column gap-3">
+        <div class="mb-3">
+          <label class="form-label">単価</label>
+          <input
+            class="form-control w-100"
+            id="item-price"
+            data-id="item-price"
+            type="number"
+            placeholder="単価"
+          />
+        </div>
+        <div class="mb-3">
+          <label class="form-label">注番</label>
+          <input
+            class="form-control w-100"
+            id="order_no"
+            data-id="order_no"
+            type="text"
+            placeholder="注番"
+          />
+        </div>
+      </div>
     </div>
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center py-3">
       <button id="order_btn" class="btn btn-primary btn-lg px-5">受注</button>
     </div>
   </div>
