--- a/templates/item_register.html
+++ b/templates/item_register.html
@@ -8,7 +8,7 @@
       <h2 class="h4 m-0">品番登録</h2>
     </div>
     <div id="item_register" class="card-body row gx-5">
-      <div class="col-md-6">
+      <div class="col-md-6 d-flex flex-column gap-3">
         <div class="mb-3">
           <label>品番</label>
           <input
@@ -33,7 +33,7 @@
         </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-6 d-flex flex-column gap-3">
         <div class="mb-3">
           <label>単価</label>
           <input
@@ -81,14 +81,7 @@
           </tr>
         </thead>
         <tbody>
-          {% for item in items %}
-          <tr>
-            <td>{{ item.item_no }}</td>
-            <td>{{ item.item_name }}</td>
-            <td>{{ item.item_price }}</td>
-            <td>{{ item.item_deleted }}</td>
-          </tr>
-          {% endfor %}
+          <tr></tr>
         </tbody>
       </table>
     </div>
