--- a/templates/item_register.html
+++ b/templates/item_register.html
@@ -101,9 +101,9 @@
         headers: { "X-CSRFToken": "{{ csrf_token }}" },
       },
       columns: [
-        { data: "item_no" },
-        { data: "item_name" },
-        { data: "item_price" },
+        { data: "item_no", className: "text-start" },
+        { data: "item_name", className: "text-start" },
+        { data: "item_price", className: "text-start" },
         {
           data: "item_deleted",
           className: "text-center",
