色を普通に戻した

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 {% load static %}
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
@@ -46,12 +46,12 @@
       .sidebar {
         width: var(--sidebar-width);
         min-height: 100vh;
-        background-color: #222;
-        border-right: 2px solid #00a8f0;
+        background-color: #ffffffcc;
+        border-right: 2px solid #444;
       }
       .sidebar .container {
         padding: 10px 15px 0px 15px;
-        border-bottom: 1px solid #2db5ef;
+        border-bottom: 1px solid #333;
       }
 
       .sidebar .nav {
@@ -60,7 +60,7 @@
       }
 
       .sidebar .nav-link {
-        color: #e5e5e5;
+        color: #333;
         font-size: 1.25rem;
         padding: 0.8rem 1.5rem;
         border-radius: 0.25rem;
@@ -73,8 +73,8 @@
       }
 
       body {
-        color: #e5e5e5;
-        background-color: #333;
+        color: #333;
+        background-color: #ebebeb;
       }
     </style>
   </head>
