--- a/templates/item_register.html
+++ b/templates/item_register.html
@@ -70,7 +70,7 @@
     <div class="card-body">
       <table
         id="item_table"
-        class="table table-dark table-striped table-hover w-100"
+        class="table table-striped table-hover w-100"
       >
         <thead>
           <tr>
@@ -87,7 +87,8 @@
     </div>
   </div>
 </div>
-{% endblock content %} {% block extra_js %}
+<!-- prettier-ignore -->
+{% include 'modals/item_register_modal.html' %} {% endblock content %} {% block extra_js %}
 <script>
   $(document).ready(function () {
     const url = "{% url 'item_register' %}";
@@ -136,8 +137,7 @@
           const tr = options.$trigger;
           const data = table.row(tr).data();
           const item_no = data.item_no;
-
-          
+          $("#editModal").modal("show");
         } else if (key === "delete") {
           const tr = options.$trigger;
           const data = table.row(tr).data();
