--- a/templates/order_input.html
+++ b/templates/order_input.html
@@ -78,10 +78,7 @@
       <h2 class="m-0 h4">品番一覧</h2>
     </div>
     <div class="card-body">
-      <table
-        id="order_table"
-        class="table table-dark table-striped table-hover w-100"
-      >
+      <table id="order_table" class="table table-striped table-hover w-100">
         <thead>
           <tr>
             <th>品番</th>
