--- a/templates/shipping_list.html
+++ b/templates/shipping_list.html
@@ -8,10 +8,7 @@
       <h2 class="m-0 h4">出荷一覧</h2>
     </div>
     <div class="card-body">
-      <table
-        id="shipping_table"
-        class="table table-dark table-striped table-hover w-100"
-      >
+      <table id="shipping_table" class="table table-striped table-hover w-100">
         <thead>
           <tr>
             <th>出荷日</th>
