品番はクリックしたコンテキストメニューを参照し、変更不可

--- a/templates/modals/item_register_modal.html
+++ b/templates/modals/item_register_modal.html
@@ -19,6 +19,7 @@
                   id="reg_modal_item_no"
                   type="number"
                   data-id="item_no"
+                  disabled
                 >
                   <option value=""></option>
                   {% for item in items %}
