削除確認モーダル　デザイン完成。

--- a/templates/item_register.html
+++ b/templates/item_register.html
@@ -270,7 +270,7 @@
 
     //削除モーダル内の処理
     //この削除処理は仮のものです。
-    $(".exit").on("click", function () {
+    $(".modal-close").on("click", function () {
       $("#item-deleteModal").css("display", "none");
     });
 
