--- a/templates/modals/item_delete_modal.html
+++ b/templates/modals/item_delete_modal.html
@@ -29,12 +29,17 @@
         class="card-header d-flex justify-content-between align-items-center"
       >
         <h2 class="h4">削除</h2>
-        <button type="button" class="exit"></button>
+        <button type="button" class="btn-close modal-close"></button>
       </div>
       <div class="card-body">
-        <div>
+        <div class="h-100 d-flex justify-content-center align-items-center">
+          <h1>削除してもいいですか？</h1>
+        </div>
+      </div>
+      <div class="card-footer py-3">
+        <div class="d-flex justify-content-center gap-5">
           <button class="btn-danger btn px-5">削除</button>
-          <button class="btn-secondary btn px-5 px-5">キャンセル</button>
+          <button class="btn-secondary btn px-5 modal-close">キャンセル</button>
         </div>
       </div>
     </div>
