--- a/templates/modals/item_delete_modal.html
+++ b/templates/modals/item_delete_modal.html
@@ -38,7 +38,7 @@
       </div>
       <div class="card-footer py-3">
         <div class="d-flex justify-content-center gap-5">
-          <button class="btn-danger btn px-5">削除</button>
+          <button id="delete-item-btn" class="btn-danger btn px-5">削除</button>
           <button class="btn-secondary btn px-5 modal-close">キャンセル</button>
         </div>
       </div>
