編集時、モーダルが自動で閉じるように変更

--- a/templates/item_register.html
+++ b/templates/item_register.html
@@ -312,6 +312,7 @@
         table.ajax.reload();
         if (response.status === "success") {
           alert("編集に成功しました");
+          $("#editModal").modal("hide");
         } else {
           alert("編集に失敗しました");
         }
