編集モーダルのデザインを調整

--- a/templates/modals/item_delete_modal.html
+++ b/templates/modals/item_delete_modal.html
@@ -23,7 +23,7 @@
 </style>
 
 <div class="" id="item-deleteModal">
-  <div class="Modal-content">
+  <div class="Modal-content" style="overflow: hidden">
     <div class="card h-100">
       <div
         class="card-header d-flex justify-content-between align-items-center"
