--- a/templates/modals/item_delete_modal.html
+++ b/templates/modals/item_delete_modal.html
@@ -28,12 +28,16 @@
       <div
         class="card-header d-flex justify-content-between align-items-center"
       >
-        <h2 class="h4">削除</h2>
+        <h2 class="h4 mb-0">削除</h2>
         <button type="button" class="btn-close modal-close"></button>
       </div>
       <div class="card-body">
-        <div class="h-100 d-flex justify-content-center align-items-center">
-          <h1>削除してもいいですか？</h1>
+        <div
+          class="h-100 d-flex justify-content-center align-items-center flex-column"
+        >
+          <i class="bi bi-trash display-1"></i>
+          <h1>削除しますか？</h1>
+          <p style="color: rgb(255, 48, 48)">※ 削除を取り消すことはできません</p>
         </div>
       </div>
       <div class="card-footer py-3">
