--- a/templates/order_input.html
+++ b/templates/order_input.html
@@ -75,7 +75,7 @@
   </div>
   <div class="card">
     <div class="card-header py-3">
-      <h2 class="m-0 h4">品番一覧</h2>
+      <h2 class="m-0 h4">受注一覧</h2>
     </div>
     <div class="card-body">
       <table id="order_table" class="table table-striped table-hover w-100">
